test-run-config: improve java args parsing